add func de cadastro e login